# private-video-streaming

./: .gitignore  README.md
backend/: Cargo.toml
backend/migrations/: 001_initial_schema.sql
backend/src/: config.rs  db.rs  dto.rs  errors.rs  handlers.rs  main.rs  models.rs  service.rs  utils.rs  worker.rs
backend/src/db/: jobs.rs  mod.rs  videos.rs
backend/src/models/: job.rs  mod.rs  video.rs
docs/: architecture-principles-and-tradeoffs.md  architecture.md  c4-context-and-containers.md  contracts.md  ffmpeg-profile.md  step-3-c4-context-and-containers.md  step-3-contracts.md  success-definition.md  testing-guide.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  types.ts
frontend/src/lib/components/: ProcessingProgress.svelte  UploadDropzone.svelte  VideoPlayer.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/upload/: +page.svelte
frontend/src/routes/watch/[token]/: +page.svelte
